Add delete link for Tracks